Fixed white space above nav socket

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,5 +6,5 @@
 
 body {
   position: relative;
-  top: 40px;
+  /* top: 40px; */
 }
